fix(responsiveness): fixes items overflowing the grid container on the cart page

--- a/css/page/cart.css
+++ b/css/page/cart.css
@@ -472,7 +472,7 @@
   }
 
   .item__card {
-    grid-template-columns: auto 2fr 1fr 2fr repeat(2, 1fr);
+    grid-template-columns: auto 2fr repeat(2, auto);
     max-width: initial;
     align-items: center;
     gap: 15px;
@@ -481,13 +481,13 @@
   /* Preview */
   .item__preview {
     width: 186px;
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 1 / 3 / 2;
     align-self: stretch;
   }
 
   /* Info */
   .item__info {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 1 / 2 / 3 / 3;
     gap: 0;
     align-self: stretch;
     justify-content: space-between;
@@ -497,7 +497,7 @@
   .product__qty__container {
     grid-area: 1 / 3 / 2 / 4;
     align-self: center;
-    justify-self: end;
+    justify-self: start;
   }
 
   /* Size */
@@ -508,12 +508,13 @@
 
   /* Color */
   .product__color__container {
-    grid-area: 1 / 5 / 2 / 5;
+    grid-area: 2 / 3 / 3 / 4;
     align-self: center;
   }
 
   /* Delete button */
   .type__button {
+    grid-area: 2 / 4 / 3 / 5;
     position: static;
     justify-self: end;
   }
@@ -556,5 +557,37 @@
   /* Divider */
   .divider-grid {
     display: block;
+  }
+}
+
+@media screen and (min-width: 1138px) {
+  /* Item card layout */
+  .item__card {
+    grid-template-columns: auto 2fr 1fr 2fr repeat(2, 1fr);
+  }
+
+  /* Preview */
+  .item__preview {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  /* Info */
+  .item__info {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  /* Qty */
+  .product__qty__container {
+    justify-self: end;
+  }
+
+  /* Color */
+  .product__color__container {
+    grid-area: 1 / 5 / 2 / 6;
+  }
+
+  /* Delete button */
+  .type__button {
+    grid-area: 1 / 6 / 2 / 7;
   }
 }
